// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectTagWidget should render multiSelectTagWidget with dropdown 1`] = `
<div
  className="undefined dropdown open"
>
  <input
    aria-label="Filter"
    className="form-control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    value=""
  />
  <div
    className="dropdown-toggle"
  >
    <span
      className="caret"
    />
  </div>
  <div
    className="tags-container"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Translate(Badge)
      label="Foo"
      onDelete={[Function]}
      style={
        Object {
          "display": "inline-flex",
        }
      }
    />
  </div>
  <DropDownOptions
    createIfNoneMatch={false}
    filterText=""
    noAvailableMessage="None"
    onCreateNew={[Function]}
    onMouseEvent={[Function]}
    onSelectOption={[Function]}
    options={
      Array [
        Object {
          "label": "Bar",
          "value": "bar-1",
        },
      ]
    }
    selectedIndex={0}
  />
</div>
`;

exports[`MultiSelectTagWidget should render multiSelectTagWidget without dropdown 1`] = `
<div
  className="undefined dropdown"
>
  <input
    aria-label="Filter"
    className="form-control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    value=""
  />
  <div
    className="dropdown-toggle"
  >
    <span
      className="caret"
    />
  </div>
  <div
    className="tags-container"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Translate(Badge)
      label="Foo"
      onDelete={[Function]}
      style={
        Object {
          "display": "inline-flex",
        }
      }
    />
  </div>
</div>
`;

exports[`MultiSelectTagWidget should take default message when there isnt items 1`] = `
<div
  className="undefined dropdown open"
>
  <input
    aria-label="Filter"
    className="form-control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    value=""
  />
  <div
    className="dropdown-toggle"
  >
    <span
      className="caret"
    />
  </div>
  <div
    className="tags-container"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Translate(Badge)
      label="Foo"
      onDelete={[Function]}
      style={
        Object {
          "display": "inline-flex",
        }
      }
    />
  </div>
  <DropDownOptions
    createIfNoneMatch={false}
    filterText=""
    noAvailableMessage="No Available"
    onCreateNew={[Function]}
    onMouseEvent={[Function]}
    onSelectOption={[Function]}
    options={
      Array [
        Object {
          "label": "Bar",
          "value": "bar-1",
        },
      ]
    }
    selectedIndex={0}
  />
</div>
`;
